# ekonomistyrning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.github/workflows/: ci.yml  keep_alive.yml
.streamlit/: config.toml  secrets.toml.example
data/: quiz_fallback.json
docs/: CHANGELOG.md  CHECKLIST.md  CV_BLURB.md  DEMO_SCRIPT.md  DESIGN.md  LIMITATIONS.md  LINKEDIN_POST.md  METHODOLOGY.md  PAGE_WALKTHROUGH.md  PRD.md  REVIEW_2026-06-11.md  ROADMAP.md  TASKS.md  day 10 tasks.md
docs/superpowers/plans/: 2026-05-06-day4-day5-budget-standardkost.md
docs/superpowers/specs/: 2026-06-04-tutor-on-demand-and-quiz-optimization-design.md
pages/: 1_Kalkyl.py  2_Investering.py  3_Budget.py  4_Standardkostnadsanalys.py  5_Kunskapstest.py
scripts/: ensure-claude-cli.sh
tests/: conftest.py  eval_fixtures.json  eval_llm.py  manual_llm_smoke.py  test_budget.py  test_export.py  test_formatting.py  test_grounding_ui.py  test_html_escaping.py  test_humanizer.py  test_investering.py  test_kalkyl.py  test_llm.py  test_llm_budget.py  test_prompts.py  test_quiz_progress.py  test_scenarios.py  test_smoke.py  test_standardkost.py  test_state_save.py  test_tutor.py
utils/: __init__.py  budget.py  charts.py  export.py  formatting.py  grounding_ui.py  humanizer.py  investering.py  kalkyl.py  llm.py  llm_budget.py  prompts.py  quiz_progress.py  quiz_ui.py  scenario_continuity.py  scenarios.py  standardkost.py  state_save.py  tutor.py  ui.py
